# Compiler

./: CMakeLists.txt  README.md  Z80 Compiler.sln  todo.txt
Z80 Compiler/: ArrayMap.h  AsciiTable.h  Assembler.cpp  Assembler.h  BlockParser.cpp  BlockParser.h  CharacterUtil.h  Compiler.cpp  Compiler.h  CompilerError.h  Enviroment.h  ExpectationErrors.h  Expr.h  ExprInterpreter.cpp  ExprInterpreter.h  ExprParser.cpp  ExprParser.h  ExprPrinter.h  FnParser.cpp  FnParser.h  Function.h  Grammer.h  IL.h  ILPrinter.h  InstructionFormat.cpp  InstructionFormat.h  InstructionFormatTable.cpp  IntTypes.h  Lexer.h  Lexers.cpp  Logger.cpp  Logger.h  Operand.h  OperandDecoder.cpp  OperandDecoder.h  OperandFormatBits.h  ParseError.h  Parser.cpp  Parser.h  ReservedIdentifiers.h  (+23 more)
command_line/: CMakeLists.txt  command_line.cpp  first.jlang
compiler/: CMakeLists.txt
compiler/assembler/: AssemblyTranslation.h  Operand.h  OperandDecoder.cpp
compiler/common/: CMakeLists.txt  CompilerError.h  SourcePosition.h  StreamViewer.h
compiler/errors/: CMakeLists.txt  CompilerError.h
compiler/il_gen/: CMakeLists.txt  Enviroment.h  ILGenerator.cpp  ILGenerator.h  TypeSystem.cpp  TypeSystem.h
compiler/il_gen/common/: CMakeLists.txt  SemanticError.h
compiler/il_gen/common/include/: ScopedContainer.h
compiler/il_gen/ctrl_flow_graph/: CFGGenerator.h  CMakeLists.txt  CtrlFlowGraph.h  CtrlFlowGraphFlattener.cpp  GraphDominance.cpp  PhiNodePlacer.cpp  Renamer.cpp
compiler/il_gen/enviroment/: CMakeLists.txt  ComputedExpr.h  Enviroment.cpp  ExprInterpreter.cpp  ExprInterpreter.h  TargetInfo.cpp  TemplateReplacer.h  TypeSystem.cpp
compiler/il_gen/enviroment/include/: Enviroment.h  ScopedContainer.h  TargetInfo.h  TypeSystem.h  Types.h  VariableCreator.h
compiler/il_gen/errors/: CMakeLists.txt
compiler/il_gen/generator/: CMakeLists.txt  Generator.cpp  Generator.h  GeneratorErrors.cpp  GeneratorErrors.h
compiler/il_gen/generators/: CFGGenerator.h  CMakeLists.txt  CtrlFlowGraph.h  CtrlFlowGraphFlattener.h  ExprGenerator.cpp  ExprGenerator.h  FunctionGenerator.cpp  FunctionGenerator.h  FunctionHelpers.cpp  FunctionHelpers.h  ILExprResult.h  ILGenerator.cpp
compiler/il_gen/generators/default/: CMakeLists.txt  Generator.cpp  Generator.h  GeneratorErrors.cpp  GeneratorErrors.h  GeneratorToolKit.cpp  GeneratorToolKit.h  SimpleGenerator.cpp  SimpleGenerator.h
compiler/il_gen/generators/expr_generator/: CMakeLists.txt  ExprGenerator.cpp  ExprGenerator.h  ILExprResult.h
compiler/il_gen/generators/include/: ILGenerator.h
compiler/il_gen/graphs/: CFG.h  CFGGenerator.h  GraphDominance.cpp  GraphDominance.h  GraphUtil.h
compiler/il_gen/il/: CMakeLists.txt  IL.h  ILPrinter.h  ILType.h
compiler/il_gen/include/: SemanticError.h
compiler/il_gen/interpreter/: ExprInterpreter.cpp  ExprInterpreter.h
compiler/il_gen/language_constructs/: Bin.h  CodeModule.h  Module.h  Variable.h
compiler/il_gen/type_system/: CMakeLists.txt  ComputedExpr.cpp  ComputedExpr.h  ExprInterpreter.cpp  ExprInterpreter.h  TargetInfo.cpp  TypeSystem.cpp
compiler/il_gen/type_system/include/: TargetInfo.h  TypeSystem.h  Types.h
compiler/il_gen/util/: GraphDominance.cpp  GraphDominance.h
compiler/il_gen/variable/: CMakeLists.txt  Variable.h
compiler/lexer/: CMakeLists.txt  Lexers.cpp  ReservedIdentifiers.h
compiler/lexer/include/: Lexer.h  SourcePosition.h  Token.h
compiler/parser/: BlockParser.cpp  CMakeLists.txt  ExprParser.cpp  ExprParser.h  StmtParser.cpp
compiler/parser/expr/: CMakeLists.txt  Expr.h  ExprCloner.h  ExprPrinter.h
compiler/parser/include/: BlockParser.h  ExprParser.h  ExprStmtVisitor.h  ParseError.h  Parser.h  ParserContext.h  StmtParser.h
compiler/parser/stmt/: CMakeLists.txt  Stmt.h  StmtCloner.h  StmtHelpers.h  StmtPrinter.h
compiler/util/: CMakeLists.txt  Graph.h  GraphDominance.cpp  StreamViewer.h  StringUtil.h  VariantUtil.h  VectorUtil.h  Visitors.h
compiler/util/include/: CharacterUtil.h  FunctionUtil.h  Graph.h  MetaUtil.h  StreamViewer.h  VectorUtil.h  Visitors.h
playgound/: Grammer.h  Z80 Compiler.cpp
tests/: CMakeLists.txt  graph_test.cpp  lexer_test.cpp
